[gd_scene load_steps=3 format=3 uid="uid://cne8xee3xbgxr"]

[ext_resource type="Texture2D" uid="uid://bkl2s5cdlurwv" path="res://sprites/icons/damage.png" id="1_or520"]
[ext_resource type="Script" uid="uid://cv3fkk86lyosl" path="res://scripts/ui/popup_icon.gd" id="2_or520"]

[node name="PopupIcon" type="TextureRect"]
offset_right = 16.0
offset_bottom = 16.0
mouse_default_cursor_shape = 2
texture = ExtResource("1_or520")
script = ExtResource("2_or520")

[node name="PopupPanel" type="PopupPanel" parent="."]
auto_translate_mode = 1
initial_position = 1
size = Vector2i(194, 40)

[node name="Label" type="Label" parent="PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 190.0
offset_bottom = 36.0
text = "Duplica el da√±o"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
